--- a/modules-available/exams/templates/page-add-edit-exam.html
+++ b/modules-available/exams/templates/page-add-edit-exam.html
@@ -15,30 +15,54 @@
 		</select>
 	</div>
 
-	<div class="row">
-		<div class="form-group col-xs-6">
+	<div class="row form-group">
+		<div class="col-xs-6">
 			<label for="starttime_date">{{lang_begin_date}}</label>
-			<input required class="form-control datepicker" name="starttime_date" id="starttime_date" value="{{exam.starttime_date}}">
+			<div class="input-group">
+				<span class="input-group-addon">
+					<span class="glyphicon glyphicon-calendar"></span>
+				</span>
+				<input required class="form-control datepicker" name="starttime_date" id="starttime_date"
+						 value="{{exam.starttime_date}}">
+			</div>
 		</div>
-		<div class="form-group col-xs-6">
+		<div class="col-xs-6">
 			<label for="starttime_time">{{lang_begin_time}}</label>
-			<input required type="text" class="form-control timepicker" name="starttime_time" id="starttime_time" value="{{exam.starttime_time}}"
-					 pattern="[0-9]{1,2}:[0-9]{2}">
+			<div class="input-group bootstrap-timepicker timepicker">
+				<span class="input-group-addon">
+					<span class="glyphicon glyphicon-time"></span>
+				</span>
+				<input required type="text" class="form-control timepicker2" name="starttime_time" id="starttime_time"
+						 value="{{exam.starttime_time}}"
+						 pattern="[0-9]{1,2}:[0-9]{2}">
+			</div>
 		</div>
 	</div>
 
-	<div class="row">
-		<div class="form-group col-xs-6">
+	<div class="row form-group">
+		<div class="col-xs-6">
 			<label for="endtime_date">{{lang_end_date}}</label>
-			<input required class="form-control datepicker" name="endtime_date" id="endtime_date" value="{{exam.endtime_date}}">
+			<div class="input-group">
+				<span class="input-group-addon">
+					<span class="glyphicon glyphicon-calendar"></span>
+				</span>
+				<input required class="form-control datepicker" name="endtime_date" id="endtime_date"
+						 value="{{exam.endtime_date}}">
+			</div>
 		</div>
-		<div class="form-group col-xs-6">
+		<div class="col-xs-6">
 			<label for="endtime_time">{{lang_end_time}}</label>
-			<input required type="texxt" class="form-control timepicker" name="endtime_time" id="endtime_time" value="{{exam.endtime_time}}"
-					 pattern="[0-9]{1,2}:[0-9]{2}">
+			<div class="input-group bootstrap-timepicker timepicker">
+				<span class="input-group-addon">
+					<span class="glyphicon glyphicon-time"></span>
+				</span>
+				<input required type="texxt" class="form-control timepicker2" name="endtime_time" id="endtime_time"
+						 value="{{exam.endtime_time}}"
+						 pattern="[0-9]{1,2}:[0-9]{2}">
+			</div>
 		</div>
 	</div>
-	<div class="row">
+	<div class="row form-group">
 		<div class="form-group col-xs-12">
 			<label for="description">{{lang_description}}</label>
 			<textarea class="form-control" type="textarea" name="description" id="description">{{exam.description}}</textarea>
@@ -48,7 +72,7 @@
 	<input type="hidden" name="action" value="save">
 	<input type="hidden" name="token" value="{{token}}">
 	<input type="hidden" name="examid" value="{{exam.examid}}">
-	<button class="btn btn-success">{{lang_addExam}}</button>
+	<button class="btn btn-success">{{lang_save}}</button>
 </form>
 
 <script type="application/javascript"><!--
@@ -60,10 +84,12 @@ document.addEventListener("DOMContentLoaded", function () {
 	};
 	var timeSettings = {
 		showSeconds: false,
-		showMeridian: false
+		showMeridian: false,
+		minuteStep: 5,
+		appendWidgetTo: 'body'
 	};
 	$('.datepicker').datepicker(dateSettings);
-	$('.timepicker').timepicker(timeSettings);
+	$('.timepicker2').timepicker(timeSettings);
 
 	$('#locations').multiselect({numberDisplayed: 1});
 }, false);
