fixed i18n and updated l10n

--- a/modules-available/news/templates/page-news.html
+++ b/modules-available/news/templates/page-news.html
@@ -1,7 +1,8 @@
 
+<h1>{{lang_vmChooser_title}}</h1>
 <ul class="nav nav-tabs" role="tablist">
 	<li role="presentation" class="{{^editHelp}}active{{/editHelp}}"><a href="#news" role="tab" data-toggle="tab">{{lang_editNews}}</a></li>
-	<li role="presentation" class="{{#editHelp}}active{{/editHelp}}"	  ><a href="#help" role="tab" data-toggle="tab">Edit Help</a></li>
+	<li role="presentation" class="{{#editHelp}}active{{/editHelp}}"	  ><a href="#help" role="tab" data-toggle="tab">{{lang_editHelp}}</a></li>
 </ul>
 
 <div class="tab-content">
