[locations] Quick "fix" for buttons overlapping text in table

--- a/modules-available/locations/templates/locations.html
+++ b/modules-available/locations/templates/locations.html
@@ -32,7 +32,7 @@
 						<a class="btn btn-default btn-xs" href="?do=baseconfig&amp;module=locations&amp;locationid={{locationid}}"><span class="glyphicon glyphicon-edit"></span></a>
 					</div>
 					{{#overriddenVars}}
-					{{lang_overrideCount}}: {{overriddenVars}}
+					{{lang_overrideCount}}: {{overriddenVars}}&emsp;&emsp;
 					{{/overriddenVars}}
 					{{/havebaseconfig}}
 				</td>
@@ -41,7 +41,7 @@
 						<a class="btn btn-default btn-xs" href="?do=sysconfig&amp;locationid={{locationid}}"><span class="glyphicon glyphicon-edit"></span></a>
 					</div>
 					<span class="{{configClass}}">
-					{{configName}}
+					{{configName}}&emsp;&emsp;
 					</span>
 					{{#havesysconfig}}
 					{{/havesysconfig}}
