--- a/modules-available/statistics/templates/id44.html
+++ b/modules-available/statistics/templates/id44.html
@@ -29,14 +29,14 @@
 								animation: false,
 								tooltipTemplate: "<%if (label){%><%=label%><%}%>",
 								customTooltips: function(tooltip) {
-									if (sel !== false) sel.removeClass('info');
+									if (sel !== false) sel.removeClass('slx-bold');
 									if (!tooltip) {
 										sel = false;
 										return;
 									}
 									sel = $('#tmpid' + String(tooltip.text));
 									console.log('#tmpid' + String(tooltip.text));
-									sel.addClass('info');
+									sel.addClass('slx-bold');
 								}
 							});
 						}, false);
