--- a/modules-available/statistics/templates/memory.html
+++ b/modules-available/statistics/templates/memory.html
@@ -29,13 +29,13 @@
 								animation: false,
 								tooltipTemplate: "<%if (label){%><%=label%><%}%>",
 								customTooltips: function(tooltip) {
-									if (sel !== false) sel.removeClass('info');
+									if (sel !== false) sel.removeClass('slx-bold');
 									if (!tooltip) {
 										sel = false;
 										return;
 									}
 									sel = $('#ramid' + tooltip.text);
-									sel.addClass('info');
+									sel.addClass('slx-bold');
 								}
 							});
 						}, false);
