--- a/modules-available/main/templates/main-menu.html
+++ b/modules-available/main/templates/main-menu.html
@@ -80,8 +80,8 @@
 						<span class="caret"></span>
 					</button>
 					<ul class="dropdown-menu">
-						<li><a href="#">Settings</a></li>
-						<li role="separator" class="divider"></li>
+						<!--<li><a href="#">Settings</a></li>
+						<li role="separator" class="divider"></li> -->
 						<li><a href="#" onclick="$('#logoutForm').submit();">{{lang_logout}}</a></li>
 					</ul>
 				</ul>
