--- a/modules-available/serversetup-bwlp/templates/ipxe.html
+++ b/modules-available/serversetup-bwlp/templates/ipxe.html
@@ -43,10 +43,15 @@
 		</div>
 
 		<div class="panel-footer">
-			<a class="btn btn-default pull-right" href="?do=ServerSetup&amp;action=getimage">
-				<span class="glyphicon glyphicon-download-alt"></span>
-				{{lang_downloadImage}}
-			</a>
+			<div class="pull-right">
+				<div class="btn-group" role="group">
+					<a class="btn btn-default" href="?do=ServerSetup&amp;action=getimage">
+						<span class="glyphicon glyphicon-download-alt"></span>
+						{{lang_downloadImage}}
+					</a>
+					<span class="btn btn-default" data-toggle="modal" data-target="#help-usbimg"><span class="glyphicon glyphicon-question-sign"></span></span>
+				</div>
+			</div>
 			<button class="btn btn-primary" name="action" value="ipxe">{{lang_bootMenuCreate}}</button>
 		</div>
 	</div>
@@ -67,6 +72,31 @@
 	IPAPPEND 3</pre>
 				{{lang_menuCustomHint2}} LABEL <strong>custom</strong>
 				{{lang_menuCustomHint3}}
+			</div>
+			<div class="modal-footer"><a class="btn btn-primary" data-dismiss="modal">{{lang_close}}</a></div>
+		</div>
+	</div>
+</div>
+
+<div class="modal fade" id="help-usbimg" tabindex="-1" role="dialog">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">{{lang_usbImage}}</div>
+			<div class="modal-body">
+				<p>{{lang_usbImgHelp}}</p>
+				<p>
+					<b>Linux</b>
+					<br>
+					{{lang_usbImgHelpLinux}}
+				</p>
+				<p>
+					<b>Windows</b>
+					<br>
+					{{lang_usbImgHelpWindows}}
+				</p>
+				<p>
+					<a href="https://rufus.akeo.ie/#download">{{lang_downloadRufus}}</a>
+				</p>
 			</div>
 			<div class="modal-footer"><a class="btn btn-primary" data-dismiss="modal">{{lang_close}}</a></div>
 		</div>
